<resources>
    <string name="app_name">SunnyWeather</string>
    <string name="et_place">输入地址</string>
    <string name="tv_forecast_title">预报</string>
    <string name="tv_divider">|</string>
    <string name="tv_ultraviolet">实时紫外线</string>
    <string name="tv_carwashing">洗车</string>
    <string name="tv_coldRisk">感冒</string>
    <string name="tv_life_index_title">生活指数</string>
    <string name="tv_dressing">穿衣</string>
</resources>